Get rid of Ponglish here and there

--- a/doc/changes/DM-31541.feature.rst
+++ b/doc/changes/DM-31541.feature.rst
@@ -1,1 +1,1 @@
-Make pipetask responsible for initalization read only select nodes from the quantum graph.
+Create list of node ids for the pipetask --init-only job.
