Use memory measuring functions from the new module

--- a/doc/changes/DM-33331.misc.rst
+++ b/doc/changes/DM-33331.misc.rst
@@ -1,1 +1,1 @@
-Select BPS commands now report apporximate memory usage during their execution.
+Select BPS commands now report approximate memory usage during their execution.
