Improve documentation concerning the new command
Based on the reviewer input, I fixed some spelling errors in the documentation
and included additional pieces of information that the user might be interested
in.

--- a/doc/changes/DM-46307.feature.rst
+++ b/doc/changes/DM-46307.feature.rst
@@ -1,1 +1,1 @@
-Added a new command, ``submitcmd``, that allows the user to execute some light-weighted, ancillary scripts at a given compute site by submitting a dedicated, single-job workflow to that site.
+Added a new command, ``submitcmd``, that allows the user to execute some lightweight, ancillary scripts at a given compute site by submitting a dedicated, single-job workflow to that site.
